--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<h1>Hello, Den</h1>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Лабораторна робота 10</title>
+    <link href="./styles.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="d-flex flex-column align-items-center justify-content-center w-100 h-100">
+        <span class="lead">
+            Завантажте своє зображення(20x20 px) для розпізнавання шрифту:
+        </span>
+        <input id="fileInput" class="mt-2" type="file" accept="image/png, image/jpeg">
+        <div id="previewArea" class="d-flex flex-column align-items-center mt-2 d-none">
+        </div>
+        <button id="predictButton" type="button" class=" mt-3 btn btn-success d-none">Розпізнати</button>
+        <div id="predictionArea" class="d-none mt-3">
+            <span>
+                Результат: 
+                <span class="fw-bold" id="predictionText">
+
+                </span>
+            </span>
+        </div>
+    </div>
+    <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
+</body>
+
+</html>
