--- a/index.html
+++ b/index.html
@@ -9,27 +9,24 @@
 </head>
 
 <body>
-    <div class="d-flex flex-column align-items-center justify-content-center w-100 h-100">
-        <span class="lead">
+    <div>
+        <h3> Лабораторна робота #10, Щербак Денис, ПЗС-1</h3>
+        <p>
             Завантажте своє зображення(20x20 px) для розпізнавання шрифту:
-        </span>
-        <input id="fileInput" class="mt-2" type="file" accept="image/png, image/jpeg">
-        <div id="previewArea" class="d-flex flex-column align-items-center mt-2 d-none">
+        </p>
+        <input id="fileInput" type="file" accept="image/png, image/jpeg">
+        <div id="previewArea">
         </div>
-        <button id="predictButton" type="button" class=" mt-3 btn btn-success d-none">Розпізнати</button>
-        <div id="predictionArea" class="d-none mt-3">
-            <span>
-                Результат: 
+        <button id="predictButton" type="button">Розпізнати</button>
+        <div id="predictionArea" >
+            <p>
+                Найкращі версії нейронної мережі: 
                 <span class="fw-bold" id="predictionText">
-
                 </span>
-            </span>
+            </p>
         </div>
     </div>
     <script type="module" src="index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
 </body>
 
